# sceptre-file-resolver

./: Makefile  pyproject.toml
.circleci/: config.yml
