[tool.poetry]
name = "sceptre-file-resolver"
version = "1.0.6"
description = "A Sceptre resolver to retrieve file content"
authors = ["zaro0508 <zaro0508@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Sceptre/sceptre-file-resolver"
license = "Apache-2.0"
packages = [{ include = "resolver" }]
keywords = ["sceptre", "sceptre-resolver"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Environment :: Console",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
requests = "^2.25"
# sceptre = ">=4.0.1"
sceptre = { git = "https://github.com/branchvincent/Sceptre", rev = "py312" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.plugins."sceptre.resolvers"]
file = "resolver.file:File"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
